Full signup process working

--- a/front/src/config/i18n/en.json
+++ b/front/src/config/i18n/en.json
@@ -26,17 +26,44 @@
       },
       "createLocalAccount": {
         "title": "Create your local Gladys account",
-        "description": "All informations entered here are only saved locally in Gladys database. You can update them later at any time. Your email is just used as login identifier.",
+        "backButton": "Back",
+        "description": "All informations entered here are only saved locally in Gladys database. You can update them later at any time.",
         "firstnameLabel": "Firstname",
         "firstnamePlaceHolder": "Enter your Firstname",
         "lastnameLabel": "Lastname",
         "lastnamePlaceHolder": "Enter your Lastname",
+        "languageLabel": "Language",
+        "english": "English",
+        "french": "Français",
+        "birthdateLabel": "Birthdate",
+        "birthdatePlaceHolder": "Enter your birthdate",
+        "january": "January",
+        "february": "February",
+        "march": "March",
+        "april": "April",
+        "may": "May",
+        "june": "June",
+        "july": "July",
+        "august": "August",
+        "september": "September",
+        "october": "October",
+        "november": "November",
+        "december": "December",
         "emailLabel": "Email",
         "emailPlaceHolder": "Enter your Email",
         "passwordLabel": "Password (min 8 characters)",
         "passwordPlaceHolder": "Enter a password",
         "passwordRepeatLabel": "Repeat your password",
         "passwordRepeatPlaceHolder": "Repeat your password",
+        "firstnameError": "Firstname is required.",
+        "lastnameError": "Lastname is required.",
+        "emailError": "Email is not a valid email",
+        "passwordError": "Password should be at least 8 characters.",
+        "passwordRepeatError": "Password are not matching.",
+        "birthdateError": "Birthdate is required.",
+        "networkError": "Network Error: We didn't succeeded in contacting your Gladys instance. Are you connected to the network? Is your Gladys instance running?",
+        "emailAlreadyExistError": "A user with this email already exist.",
+        "selectorAlreadyExistError": "A user with this firstname already exist.",
         "createAccountButton": "Create Account"
       },
       "preferences": {
@@ -53,12 +80,14 @@
       },
       "configureHouse": {
         "title": "Configure your house",
-        "description": "I need some informations about your house. All those informations are saved only in Gladys local database.",
+        "description": "All those informations are saved only in Gladys local database. If you have several houses, you can configure them later in Gladys.",
         "houseNameLabel": "Name",
         "houseNamePlaceHolder": "Enter your house name",
+        "houseNameError": "House name is required",
         "houseLocationLabel": "Click where you house is located",
         "roomsLabel": "Add all rooms in your house",
         "roomNamePlaceHolder": "Type a new room to add",
+        "addRoomButton": "Add",
         "saveHouse": "Save house"
       },
       "success": {
