--- a/front/src/config/i18n/en.json
+++ b/front/src/config/i18n/en.json
@@ -126,7 +126,11 @@
           "editRoomLabel": "Select the room you want to display here."
         },
         "userPresence": {
-          "description": "Display who's at home and who is not."
+          "description": "Display who's at home and who is not.",
+          "left": "Left",
+          "atHome": "At Home",
+          "neverSeenAtHome": "Never Seen At Home",
+          "error": "There was an error fetching the list of user. Please refresh."
         },
         "camera": {
           "editCameraLabel": "Select the camera you want to display here."
